v1.3.0 -Add Get Job By Id -Ignore JWT Expiration
