# swagger_output.json
@@ -1,9 +1,9 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.2.1",
+    "version": "1.3.0",
     "title": "FOUNDLUNTEER API",
-    "description": "v1.1.0\n-Add Show saved job for individual\n-Create universal Add, Login, And Get For User\n\nv1.2.1\n-Add get and post image profile for user\n-Register API for Individual\n-Get detail job for Organization\n-Makes routing more make sense\n-Add Paging And Filtering For Get All Job"
+    "description": "v1.1.0\n-Add Show saved job for individual\n-Create universal Add, Login, And Get For User\n\nv1.2.1\n-Add get and post image profile for user\n-Register API for Individual\n-Get detail job for Organization\n-Makes routing more make sense\n-Add Paging And Filtering For Get All Job\n\nv1.3.0\n-Add Get Job By Id\n-Ignore JWT Expiration"
   },
   "host": "aws.senna-annaba.my.id",
   "basePath": "/",
@@ -17,10 +17,6 @@
     },
     {
       "name": "Organization"
-    },
-    {
-      "name": "Job",
-      "description": "For Organization or Individual"
     }
   ],
   "consumes": [
@@ -249,6 +245,55 @@
           },
           "403": {
             "description": "Forbidden",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/job/get/{jobId}": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Get One Job By Id",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "jobId",
+            "type": "string",
+            "required": true,
+            "description": "Job UUID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
             "schema": {
               "type": "object",
               "properties": {
